# vk-mem-rs

./: .gitmodules  Cargo.toml  README.md  build.rs
src/: ffi.rs  lib.rs
tests/: mod.rs
