[package]
name = "vk-mem"
version = "0.2.3"
authors = ["Graham Wihlidal <graham@wihlidal.ca>"]
description = "Rust ffi bindings and idiomatic wrapper for AMD Vulkan Memory Allocator (VMA)"
homepage = "https://github.com/gwihlidal/vk-mem-rs"
repository = "https://github.com/gwihlidal/vk-mem-rs"
documentation = "https://docs.rs/vk-mem"
readme = "README.md"
keywords = ["vulkan", "vk", "ash", "memory", "allocator"]
categories = ["api-bindings", "rendering", "rendering::engine", "rendering::graphics-api", ]
license = "MIT/Apache-2.0"
build = "build.rs"
include = [
    "src/*.rs",
    "src/*.cpp",
    "build.rs",
    "Cargo.toml",
    "extern/Vulkan-Headers/include/vulkan/vulkan.h",
    "extern/Vulkan-Headers/include/vulkan/vulkan_core.h",
    "extern/Vulkan-Headers/include/vulkan/vk_platform.h",
    "extern/VulkanMemoryAllocator/include/vk_mem_alloc.h",
]
edition = "2018"

[badges]
travis-ci = { repository = "gwihlidal/vk-mem-rs" }
maintenance = { status = "actively-developed" }

[dependencies]
ash = ">= 0.33"
bitflags = "1.2.1"

[build-dependencies]
cc = "1.0.50"
bindgen = "0.59.1"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[features]
default = []
link_vulkan=[]
recording=[]